Fixed header on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4193,81 +4193,31 @@ body {
     padding: 0;
 }
 
-/* Alert */
-
-#alert {
-    position: relative;
-}
-/*#alert:hover:after {
-    background: hsla(0,0%,0%,.8);
-    border-radius: 3px;
-    color: #f6f6f6;
-    content: 'Click to dismiss';
-    font: bold 12px/30px sans-serif;
-    height: 30px;
-    left: 50%;
-    margin-left: -60px;
-    position: absolute;
-    text-align: center;
-    top: 50px;
-    width: 120px;
-}*/
-#alert:hover:before {
-    content: '';
-    height: 0;
-    left: 50%;
-    margin-left: -10px;
-    position: absolute;
-    top: 40px;
-    width: 0;
-}
-.alert {
-    background-color: #4c5c96;
-    background-size: 20px 20px;
-    box-shadow: 0 5px 0 hsla(0,0%,0%,.1);
-    color: #f6f6f6;
-    display: block;
-    font: bold 16px/40px sans-serif;
-    height: 40px;
-    position: relative;
-    text-align: center;
-    text-decoration: none;
-    top: -45px;
-    width: 100%;
-    -webkit-animation: alert 1s ease forwards;
-       -moz-animation: alert 1s ease forwards;
-        -ms-animation: alert 1s ease forwards;
-         -o-animation: alert 1s ease forwards;
-            animation: alert 1s ease forwards;
+#experiment-banner {
+	line-height: 2.2rem;
+	padding-top: 12px;
+	padding-bottom: 12px;
+	background-color: #4c5c96;
+	border-top: 1px solid rgba(0,0,0,0.15);
+	border-bottom: 1px solid rgba(0,0,0,0.15);
+	font: bold 16px/40px sans-serif;
+	position: relative;
 }
 
-/* Animation */
-
-@-webkit-keyframes alert {
-    0% { opacity: 0; }
-    50% { opacity: 1; }
-    100% { top: 0; }
-}
-@-moz-keyframes alert {
-    0% { opacity: 0; }
-    50% { opacity: 1; }
-    100% { top: 0; }
-}
-@-ms-keyframes alert {
-    0% { opacity: 0; }
-    50% { opacity: 1; }
-    100% { top: 0; }
-}
-@-o-keyframes alert {
-    0% { opacity: 0; }
-    50% { opacity: 1; }
-    100% { top: 0; }
-}
-@keyframes alert {
-    0% { opacity: 0; }
-    50% { opacity: 1; }
-    100% { top: 0; }
+.warning-message {
+	box-sizing: border-box;
+	display: block;
+	font-size: 16px;
+	line-height: 22px;
 }
 
+.warning-message-text {
+	display: block;
+	font-size: 16px;
+	line-height: 22px;
+	text-align: center;
+	padding-left: 2rem;
+	padding-right: 2rem;
+}
 
 
